<resources>
    <string name="app_name">WorkoutLog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Don\'t have an account? <u>Sign Up</u></string>
    <string name="login">Already have an account? <u>Log In</u></string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="plan">plan</string>
    <string name="plann">Plan</string>
    <string name="plan2">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">PROFILE FRAGMENT</string>

</resources>